--- a/src/components/MockScreen/Notes.module.css
+++ b/src/components/MockScreen/Notes.module.css
@@ -1,4 +1,4 @@
-.notes {
+.bookwise {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -6,6 +6,7 @@
   flex-flow: row nowrap;
   filter: contrast(60%);
 }
+
 .books {
   display: flex;
   flex-flow: column nowrap;
@@ -43,12 +44,13 @@
   animation-name: fallDown;
   animation-fill-mode: forwards;
   transform-origin: left 50%;
+  margin-top: 0.2rem;
 }
 .active {
-  background-color: hsla(303, 76%, 53%, 0.8);
+  background-color: hsla(303, 67%, 34%, 0.8);
 }
 .pinned {
-  background-color: hsl(120, 80%, 55%, 0.8);
+  background-color: rgba(34, 145, 34, 0.8);
 }
 
 @keyframes fallDown {
