--- a/src/components/MockScreen/Sudoku.module.css
+++ b/src/components/MockScreen/Sudoku.module.css
@@ -9,7 +9,7 @@
   grid-template-columns: repeat(3, auto);
   height: 60px;
   width: 60px;
-  animation: pop 0.5s linear;
+  animation: pop 1s linear;
   animation-fill-mode: forwards;
 }
 .sudokuSquare {
@@ -26,19 +26,18 @@
 
 @keyframes pop {
   0% {
-    transform: scale(1);
+    opacity: 1;
   }
-  40% {
-    transform: scale(0.3);
+  50% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.2;
   }
   90% {
-    transform: scale(0.5);
-  }
-  99% {
-    opacity: 1;
+    opacity: .6;
   }
   100% {
     opacity: 0;
-    transform: scale(1);
   }
 }
