--- a/src/components/ThemeButton/themebutton.module.css
+++ b/src/components/ThemeButton/themebutton.module.css
@@ -1,8 +1,3 @@
-@import "../../universals.css";
-
-div {
-  --clr-sun: rgb(182, 182, 50);
-}
 .inactive {
   animation: rotation 10s linear infinite;
 }
@@ -40,7 +35,7 @@ div {
   content: "";
   position: absolute;
   inset: 0;
-  background: var(--clr-sun);
+  background: var(--clr-stars);
   filter: brightness(150%);
   border-radius: inherit;
   transform: scale(0);
@@ -54,7 +49,7 @@ div {
   animation: starborn 850ms ease-in;
 }
 .sun {
-  fill: var(--clr-sun);
+  fill: var(--clr-stars);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,8 +98,7 @@ div {
   align-items: center;
   transition: transform 2s ease-out 0.2s;
   transform: rotate(0turn) scale(1.3);
-  /* width: 100%; */
-  fill: var(--clr-sun);
+  fill: var(--clr-stars);
 }
 .stars.light {
   transform-origin: center;
