--- a/src/universals.css
+++ b/src/universals.css
@@ -38,8 +38,10 @@ button {
   --clr-stars: rgb(182, 182, 50);
   --clr-about: teal;
   --clr-about-muted: hsl(180, 24%, 35%);
-  --clr-technologies: hsl(119, 24%, 35%);
-  --clr-technologies-muted: hsl(96, 24%, 35%);
+  --clr-technologies: hsl(46, 24%, 35%);
+  --clr-technologies-muted: hsl(64, 24%, 35%);
+  --clr-projects: hsl(0, 56%, 37%);
+  --clr-projects-muted: hsl(0, 24%, 35%);
 }
 
 .light {
