--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -1,25 +1,34 @@
 .heroSection {
   height: 100vh;
   display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 .contentContainer {
   display: flex;
   flex-flow: row wrap-reverse;
+  align-content: center;
+  justify-content: center;
+  gap: 5rem;
+  width: 100%;
   padding-left: 3rem;
   padding-right: 3rem;
-  align-content: center;
-  gap: 4rem;
 }
 .textContainer {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   gap: 1rem;
+  text-align: right;
+  align-items: flex-end;
 }
 .textContainer h3 {
-  font-size: clamp(1vw, 1rem, 1.2rem);
   color: var(--clr-accent);
-  line-height: clamp(1vw, 1rem, 1.2rem);
+  font-size: clamp(1vw, 1rem, 1rem);
+  line-height: clamp(1vw, 1rem, 1rem);
+  margin-right: 18px;
 }
 .textContainer h1 {
   font-size: clamp(3rem, 7vw, 5rem);
@@ -27,27 +36,26 @@
   letter-spacing: 0.2rem;
 }
 .textContainer h2 {
-  font-size: clamp(2rem, 3vw, 3rem);
   color: var(--clr-accent);
   filter: contrast(10%);
+  font-size: clamp(2rem, 3vw, 3rem);
   line-height: clamp(2rem, 3vw, 3rem);
 }
 .textContainer p {
   padding-top: 0.5rem;
-  line-height: 1.6rem;
   max-width: 50ch;
   filter: contrast(10%);
+  line-height: 1.6rem;
 }
 .contact {
-  margin-top: 2rem;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   gap: 2rem;
+  justify-content: center;
 }
 .contact p {
   filter: brightness(30%);
-  padding-top:0;
 }
 .contactButton {
   padding: 1rem 2rem;
@@ -80,34 +88,15 @@
 .contactButton:hover::before {
   opacity: 0.1;
 }
-@media screen and (min-width: 1200px) {
-  .contentContainer {
-    padding-left: 13rem;
-  }
+.socials {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1rem;
 }
-@media screen and (max-width: 1300px) {
-  .contentContainer {
-    text-align: center;
-    justify-content: center;
-  }
-  .contact {
-    align-self: center;
-    justify-content: center;
-  }
-  .textContainer p {
-    align-self: center;
-  }
-}
-@media screen and (max-height: 850px) {
-  .heroSection {
-    margin-top: 12rem;
-  }
-}
-@media screen and (max-width: 400px) {
-  .contentContainer {
-    padding: 0;
-  }
+@media screen and (max-width: 1390px) {
   .textContainer {
-    padding: 0 .5rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
