--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,9 @@
 main {
   background-color: var(--clr-background);
   background-image: var(--clr-background-gradient);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
 }
 
 .themeButtonContainer {
@@ -25,18 +28,14 @@ main {
   display: flex;
   flex-flow: row wrap;
   gap: 5rem;
-  justify-content: space-between;
-  max-width: 130rem;
-  padding-left: 13rem;
+  justify-content: center;
+  padding: 0 5rem;
 }
-
-@media screen and (max-width: 1200px) {
-  .meContainer {
-    justify-content: center;
-    padding-left: 0;
-  }
+.meContainer > * {
+  min-height: 37rem;
+}
+@media screen and (max-width: 1750px) {
   .meContainer > * {
-    flex-basis: 66%;
+    min-height: 0;
   }
 }
-
