--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -7,7 +7,6 @@
   justify-content: space-between;
   max-width: 130rem;
   padding-left: 13rem;
-  background-color: pink;
 }
 .projectContainer h1 {
   color: var(--clr-projects);
@@ -33,4 +32,7 @@
   flex-grow: 2;
   min-width: 30px;
   background-color: var(--clr-projects);
+}
+.projectIcon {
+  max-height: 20px;
 }
