--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -1,163 +1,75 @@
 .techContainer {
-  width: clamp(30ch, 55vw, 70ch);
+  margin-left: auto;
 }
 .techContainer h1 {
-  color: var(--clr-technologies);
-  filter: contrast(30%);
-  letter-spacing: 0.2rem;
-  font-size: clamp(1rem, 5vw, 2.5rem);
-  text-align: end;
-  display: flex;
+  text-align: right;
   margin-left: auto;
-  align-items: center;
-  gap: 1rem;
-  width: 80%;
-  margin-bottom: 2rem;
-  white-space: nowrap;
+  color: var(--clr-technologies);
 }
-.techContainer h1::before {
-  content: '';
-  height: 1px;
-  margin-right: 1rem;
-  flex-grow: 2;
-  min-width: 30px;
-  background-color: var(--clr-technologies);
-}
-.techContainer h1::after {
+.techContainer h1:after {
   content: '';
   height: 1px;
   min-width: 10px;
-  background-color: var(--clr-technologies);
+  background-color: currentColor;
 }
-.techContainer p {
-  color: var(--clr-technologies-muted);
+.techContainer h1::before {
+  content: '';
+  margin-left: 1rem;
+  height: 1px;
+  flex-grow: 2;
+  min-width: 30px;
+  background-color: currentColor;
 }
-.types {
+.zones {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-end;
   gap: 2rem;
 }
-.typeContainer {
+.zone {
   flex-basis: 44%;
+  display: flex;
+  flex-flow: column nowrap;
+  position: relative;
+  align-items: flex-end;
 }
-.icon {
+.zone > div {
   display: flex;
   justify-content: center;
   position: relative;
   align-items: center;
 }
-.icon::before {
+.zone > div::before {
   content: '';
   height: 100px;
   width: 200px;
   position: relative;
   border-radius: 29px;
 }
-.icon img {
+.zone div img {
   max-height: 70%;
   position: absolute;
 }
-.design::before {
-  background: linear-gradient(142.35deg, #44728c 15.59%, #9ee6ba 89.12%);
+.zone h2 {
+  color: var(--clr-technologies);
+  filter: contrast(80%);
+  text-align: center;
+  margin: 0.6rem 0rem;
+  width: 13ch;
 }
-.design.icon .static {
-  max-height: 55%;
-  left: 47%;
-  top: 15%;
-}
-.design.icon .animated {
-  animation: spin 10s infinite ease-in-out;
-  animation-direction: alternate;
-  transform-origin: center;
-  animation-fill-mode: both;
-}
-.frontEnd::before {
-  background: linear-gradient(
-    142.35deg,
-    #64558e 15.59%,
-    rgba(145, 88, 147, 0.84) 89.12%
-  );
-}
-.frontEnd.icon .static {
-  max-height: 55%;
-  box-shadow: -3px 3px 3px 1px rgba(0, 0, 0, 0.233);
-}
-.frontEnd.icon .animated {
-  animation-direction: alternate;
-  transform-origin: center;
-  animation-fill-mode: both;
-}
-.FEButton {
-  animation: buttonClick 10s infinite ease-in-out;
-}
-.FEMouse {
-  animation: mouseClick 10s infinite ease-in-out;
-  height: 40%;
-  left: 47%;
-  top: 38%;
-}
-.devOps::before {
-  background: linear-gradient(142.35deg, #bd9d4a 15.59%, #ce8e85 89.12%);
-}
-
-.backEnd::before {
-  background: linear-gradient(142.35deg, #a83f3f 15.59%, #ffd5dd 89.12%);
-}
-@media screen and (max-width: 1750px) {
-  .techContainer {
-    margin-left: 30rem;
-  }
+.zone p {
+  color: var(--clr-technologies-muted);
+  font-size: 1rem;
+  max-width: 20ch;
+  text-align: center;
 }
 @media screen and (max-width: 1350px) {
   .techContainer {
     margin-left: 0;
   }
 }
-@media screen and (max-width: 800px) {
-  .types {
+@media screen and (max-width: 1000px) {
+  .zones {
     justify-content: center;
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  10% {
-    transform: rotate(120deg);
-  }
-  100% {
-    transform: rotate(120deg);
-  }
-}
-
-@keyframes mouseClick {
-  0% {
-    transform: scale(1);
-  }
-  10% {
-    transform: scale(0.8);
-  }
-  20% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-@keyframes buttonClick {
-  0% {
-    filter: brightness(1);
-  }
-
-  10% {
-    filter: brightness(0.5);
-  }
-  20% {
-    filter: brightness(1);
-  }
-  100% {
-    filter: brightness(1);
   }
 }
