--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,6 @@
 main {
-  background-color: var(--clr-background);
-  background-image: var(--clr-background-gradient);
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
 }
 
 .themeButtonContainer {
@@ -18,24 +15,46 @@ main {
   top: 96%;
   left: 96%;
 }
-.tempFooter {
-  height: 50px;
-  padding: 2rem;
-  text-align: center;
-  width: 100%;
+.content {
+  display: flex;
+  flex-flow: column;
+  width: clamp(45vw, 70vw, 60rem);
+  margin: auto;
+  /* align-items: center; */
+  justify-content: center;
 }
+.content h1 {
+  filter: contrast(50%);
+  letter-spacing: 0.2rem;
+  font-size: clamp(1rem, 5vw, 2.5rem);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 80%;
+  margin-bottom: 2rem;
+  white-space: nowrap;
+}
+
 .meContainer {
   display: flex;
   flex-flow: row wrap;
   gap: 5rem;
-  justify-content: center;
-  padding: 0 5rem;
 }
 .meContainer > * {
-  min-height: 37rem;
+  width: clamp(30ch, 45vw, 50ch);
 }
-@media screen and (max-width: 1750px) {
+
+.tempFooter {
+  height: 50px;
+  padding-top: 200rem;
+  text-align: center;
+  width: 100%;
+}
+@media screen and (max-width: 1350px) {
+  .meContainer {
+    justify-content: center;
+  }
   .meContainer > * {
-    min-height: 0;
+    width: 100%;
   }
 }
