--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,38 +1,96 @@
-.projectContainer {
-  margin-bottom: 5rem;
-  width: clamp(30ch, 45vw, 70ch);
-  display: flex;
-  flex-flow: row wrap;
-  gap: 5rem;
-  justify-content: space-between;
-  max-width: 130rem;
-  padding-left: 13rem;
+.projectsContainer {
+  margin-top: 5rem;
+  align-self: center;
+  width: 100%;
 }
-.projectContainer h1 {
+.projectsContainer h1 {
   color: var(--clr-projects);
-  filter: contrast(30%);
-  letter-spacing: 0.2rem;
-  font-size: clamp(1rem, 5vw, 2.5rem);
+  margin: auto;
+  text-align: center;
   display: flex;
-  align-items: center;
-  gap: 1rem;
-  width: 80%;
-  margin-bottom: 2rem;
+  justify-content: center;
 }
-.projectContainer h1::before {
+.projectsContainer h1:before {
   content: '';
-  height: 1px;
-  width: 10px;
-  background-color: var(--clr-projects);
-}
-.projectContainer h1::after {
-  content: '';
-  margin-left: 1rem;
   height: 1px;
   flex-grow: 2;
   min-width: 30px;
-  background-color: var(--clr-projects);
+  background-color: currentColor;
 }
-.projectIcon {
-  max-height: 20px;
+
+.projectsContainer h1::after {
+  content: '';
+  height: 1px;
+  flex-grow: 2;
+  min-width: 30px;
+  background-color: currentColor;
+}
+
+.project {
+  border-radius: 15px;
+  display: flex;
+  flex-flow: row nowrap;
+  position: relative;
+  margin: 2rem auto;
+  width: 100%;
+  height: 100%;
+  box-shadow: -3px 3px 10px 5px rgba(20, 20, 20, 0.452);
+}
+
+.preview {
+  width: 100%;
+  height: 100%;
+  box-shadow: 4px 0px 2px 0px rgba(14, 14, 14, 0.425);
+  border-radius: 5px;
+  position: absolute;
+  object-fit: cover;
+}
+
+.project::after {
+  content: '';
+  background-color: rgba(48, 48, 48, 0.479);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  border-radius: 5px;
+}
+
+.content {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 2rem;
+  width: 100%;
+  padding: 2rem;
+  z-index: 2;
+  min-height: 50vw;
+}
+
+.project h2 {
+  color: var(--clr-projects);
+  font-size: clamp(1.5rem, 5vw, 2.7rem);
+  font-weight: 900;
+  width: 100%;
+}
+
+.project p {
+  color: var(--clr-projects);
+  font-size: clamp(1rem, 2vw, 1.5rem);
+}
+
+.icons {
+  display: flex;
+  flex-flow: row wrap;
+  background-color: rgba(12, 12, 12, 0.404);
+  width: auto;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 15px;
+}
+
+.icons img {
+  max-height: 32px;
 }
