--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -4,7 +4,7 @@
 .techContainer h1 {
   text-align: right;
   margin-left: auto;
-  color: var(--clr-technologies);
+  color: var(--clr-about);
 }
 .techContainer h1:after {
   content: '';
@@ -32,6 +32,7 @@
   flex-flow: column nowrap;
   position: relative;
   align-items: flex-end;
+  margin: auto;
 }
 .zone > div {
   display: flex;
@@ -51,25 +52,26 @@
   position: absolute;
 }
 .zone h2 {
-  color: var(--clr-technologies);
+  color: var(--clr-about);
   filter: contrast(80%);
   text-align: center;
   margin: 0.6rem 0rem;
   width: 13ch;
 }
 .zone p {
-  color: var(--clr-technologies-muted);
+  color: var(--clr-about-muted);
   font-size: 1rem;
   max-width: 20ch;
   text-align: center;
 }
-@media screen and (max-width: 1350px) {
+@media screen and (max-width: 2450px) {
   .techContainer {
     margin-left: 0;
   }
-}
-@media screen and (max-width: 1000px) {
   .zones {
+    justify-content: center;
+  }
+  .zone {
     justify-content: center;
   }
 }
