--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  /* animation: fadeIn 0.5s ease-in; */
 }
 .contentContainer {
   display: flex;
@@ -101,3 +102,15 @@
     text-align: center;
   }
 }
+/* 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px)
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px)
+
+  }
+} */
