--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -4,7 +4,7 @@
 .techContainer h1 {
   text-align: right;
   margin-left: auto;
-  color: var(--clr-about);
+  color: var(--clr-accent);
 }
 .techContainer h1:after {
   content: '';
@@ -31,7 +31,7 @@
   display: flex;
   flex-flow: column nowrap;
   position: relative;
-  align-items: flex-end;
+  align-items: center;
   margin: auto;
 }
 .zone > div {
@@ -52,14 +52,14 @@
   position: absolute;
 }
 .zone h2 {
-  color: var(--clr-about);
-  filter: contrast(80%);
+  color: var(--clr-secondary);
+  filter: contrast(40%);
   text-align: center;
   margin: 0.6rem 0rem;
   width: 13ch;
 }
 .zone p {
-  color: var(--clr-about-muted);
+  color: var(--clr-text-muted);
   font-size: 1rem;
   max-width: 20ch;
   text-align: center;
