--- a/src/universals.css
+++ b/src/universals.css
@@ -3,6 +3,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  transition: color 0.7s ease-in;
 }
 
 body,
@@ -35,27 +36,31 @@ li {
 }
 .dark {
   --clr-background: hsl(0, 0%, 13%);
+  --clr-background-off: #1c1c1c;
   --clr-background-gradient: linear-gradient(180deg, #212121, #1c2222, #212121);
   --clr-primary-text: hsl(357, 100%, 99%);
   --clr-accent: #00ffff;
   --clr-dark-accent: hsl(200, 90%, 40%);
   --clr-stars: rgb(241, 165, 0);
-  --clr-about: hsl(180deg 13% 50%);
   --clr-text-muted: hsl(180, 24%, 35%);
-  --clr-secondary: hsl(0, 44%, 74%);
-  --clr-technologies-muted: hsl(0, 33%, 67%);
-  --clr-projects: hsl(0, 56%, 37%);
-  --clr-projects-muted: hsl(0, 24%, 35%);
+  --clr-secondary: hsl(0deg 51% 79%);
 }
 
 .light {
   --clr-background: hsl(306deg 10% 86%);
-  --clr-background-gradient: linear-gradient(180deg, hsl(306deg 30% 91%), hsl(306deg 10% 86%), hsl(306deg 30% 91%));
+  --clr-background-off: #ededed;
+  --clr-background-gradient: linear-gradient(
+    180deg,
+    hsl(306deg 30% 91%),
+    hsl(306deg 10% 86%),
+    hsl(306deg 30% 91%)
+  );
   --clr-primary-text: hsl(0, 0%, 13%);
+  --clr-text-muted: hsl(324, 19%, 27%);
   --clr-accent: hsl(325, 100%, 43%);
-  --clr-dark-accent: hsl(360, 90%, 33%);
+  --clr-dark-accent: hsl(325, 100%, 26%);
+  --clr-secondary: #01acac;
   --clr-stars: rgb(182, 182, 50);
-  --clr-about: teal;
 }
 
 #root {
